Fixed dark mode scrollbar colour for reworked tabular CSS

--- a/html/sass/modules/_uhppoted.scss
+++ b/html/sass/modules/_uhppoted.scss
@@ -141,6 +141,7 @@ footer {
   justify-content: center;    
   align-items: center;
   padding-right: 8px;
+  cursor: pointer;
 }
 
 #avatar p {
