--- a/html/sass/themes/dark/_tabular.scss
+++ b/html/sass/themes/dark/_tabular.scss
@@ -1,14 +1,14 @@
 // Ref. https://css-tricks.com/custom-scrollbars-in-webkit/
-// Ref. https://www.codespeedy.com/change-browser-scrollbar-color-and-style-in-css/
+// Ref. https://superuser.com/questions/852298/how-can-i-change-the-scroll-bar-in-google-chrome-to-have-different-colors
 
-.tabular::-webkit-scrollbar {
+::-webkit-scrollbar {
   background-color: $solarize_base0;
 }
  
-.tabular::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: $solarize-base0;
 }
  
-.tabular::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: $solarize-base01;
 }
